# plan9_asm

./: Cargo.toml  README.md
examples/: simple.rs
src/: common.rs  directives_macro.rs  lib.rs  macros.rs
src/operand/: mod.rs
src/register_with_offset/: mod.rs  register.rs
src/snapshots/: plan9_asm__macros__snapshots__addq-2.snap  plan9_asm__macros__snapshots__addq-3.snap  plan9_asm__macros__snapshots__addq-4.snap  plan9_asm__macros__snapshots__addq.snap  plan9_asm__macros__snapshots__call.snap  plan9_asm__macros__snapshots__directive_call.snap  plan9_asm__macros__snapshots__directive_jmp-2.snap  plan9_asm__macros__snapshots__directive_jmp.snap  plan9_asm__macros__snapshots__directive_pcdata.snap  plan9_asm__macros__snapshots__jls-2.snap  plan9_asm__macros__snapshots__jls-3.snap  plan9_asm__macros__snapshots__jls-4.snap  plan9_asm__macros__snapshots__jls.snap  plan9_asm__macros__snapshots__jmp-2.snap  plan9_asm__macros__snapshots__jmp-3.snap  plan9_asm__macros__snapshots__jmp-4.snap  plan9_asm__macros__snapshots__jmp.snap  plan9_asm__macros__snapshots__nop.snap  plan9_asm__macros__snapshots__pcdata.snap  plan9_asm__macros__snapshots__subq-2.snap  plan9_asm__macros__snapshots__subq-3.snap  plan9_asm__macros__snapshots__subq-4.snap  plan9_asm__macros__snapshots__subq.snap  plan9_asm__snapshots__addq-2.snap  plan9_asm__snapshots__addq-3.snap  plan9_asm__snapshots__addq-4.snap  plan9_asm__snapshots__addq.snap  plan9_asm__snapshots__call.snap  plan9_asm__snapshots__directive_call.snap  plan9_asm__snapshots__directive_jmp-2.snap  plan9_asm__snapshots__directive_jmp.snap  (+15 more)
(+6 files in other folders)
