[package]
name = "plan9_asm"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/ggvm-org/plan9_asm"
keywords = ["plan9", "assembly"]
readme = "README.md"
categories = ["embedded"]
description = "Plan9 Assembly wrapper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = "1.12.0"
